--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev:test-vite": "pnpm --filter @jolibox/test run dev",
+    "build:internal": "pnpm --filter @jolibox/internal run build",
     "build:ads": "pnpm --filter @jolibox/ads-sdk run build",
     "build:test-vite": "pnpm --filter @jolibox/test run build:vite",
     "test": "echo \"Error: no test specified\" && exit 1"
