--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "tsup": "^8.3.0",
     "tsx": "^4.19.1",
+    "typedoc": "^0.26.7",
     "typescript": "^5.6.2"
   }
 }
