--- a/packages/ads/package.json
+++ b/packages/ads/package.json
@@ -7,6 +7,7 @@
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "typedoc": "typedoc",
     "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
