--- a/packages/ads/package.json
+++ b/packages/ads/package.json
@@ -8,6 +8,7 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsup",
+    "typedoc": "typedoc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
