--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "type": "module",
   "scripts": {
-    "typedoc": "typedoc && pnpm typedoc:ads",
+    "typedoc": "pnpm typedoc:ads && pnpm typedoc:runtime && typedoc",
     "serve:doc": "pnpm typedoc && serve docs",
     "dev:test-vite": "pnpm --filter @jolibox/test run dev",
     "build:internal": "pnpm --filter @jolibox/internal run build",
+    "build:runtime": "pnpm --filter @jolibox/runtime run build",
     "build:ads": "pnpm --filter @jolibox/ads-sdk run build",
     "typedoc:ads": "pnpm --filter @jolibox/ads-sdk run typedoc",
+    "typedoc:runtime": "pnpm --filter @jolibox/runtime run typedoc",
     "build:test-vite": "pnpm --filter @jolibox/test run build:vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
