--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "name": "@jolibox/jolibox-js-sdk",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Jolibox JavaScript SDK",
+  "homepage": "https://sdk-docs.jolibox.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com:Jolibox-Developer/Jolibox-JS-SDK.git"
+  },
   "type": "module",
   "scripts": {
     "typedoc": "pnpm typedoc:ads && pnpm typedoc:runtime && typedoc",
@@ -13,16 +18,25 @@
     "typedoc:ads": "pnpm --filter @jolibox/ads-sdk run typedoc",
     "typedoc:runtime": "pnpm --filter @jolibox/runtime run typedoc",
     "build:test-vite": "pnpm --filter @jolibox/test run build:vite",
+    "update:version": "pnpm version $(cat package.json | jq -r .version) -ws --no-workspaces-update --allow-same-version",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "jolibox",
+    "minigame",
+    "sdk",
+    "ads"
+  ],
+  "author": "Jolibox",
+  "license": "MIT",
   "devDependencies": {
     "serve": "^14.2.3",
     "tsup": "^8.3.0",
     "tsx": "^4.19.1",
     "typedoc": "^0.26.7",
     "typescript": "^5.6.2"
-  }
+  },
+  "workspaces": [
+    "packages/*"
+  ]
 }
