--- a/packages/ads/package.json
+++ b/packages/ads/package.json
@@ -1,7 +1,13 @@
 {
   "name": "@jolibox/ads-sdk",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.0.1",
+  "description": "Jolibox JavaScript SDK for Ads",
+  "homepage": "https://sdk-docs.jolibox.com",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com:Jolibox-Developer/Jolibox-JS-SDK.git",
+    "directory": "packages/ads"
+  },
   "main": "dist/index.cjs",
   "type": "module",
   "module": "dist/index.esm.js",
@@ -11,7 +17,12 @@
     "typedoc": "typedoc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "jolibox",
+    "minigame",
+    "sdk",
+    "ads"
+  ],
+  "author": "Jolibox",
+  "license": "MIT"
 }
