--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "typedoc:zh_cn": "DOC_LANG=zh_cn pnpm typedoc --generate-from-json json/zh --lang zh --readme README-zh_cn.md",
     "serve:doc": "serve docs",
     "dev:test-vite": "pnpm --filter @jolibox/test run dev",
-    "build:internal": "pnpm --filter @jolibox/internal run build",
-    "build:runtime": "pnpm --filter @jolibox/runtime run build",
-    "build:ads": "pnpm --filter @jolibox/ads-sdk run build",
+    "build": "pnpm build:web-sync-sdk && pnpm build:web-async-sdk && pnpm build:sdk",
+    "build:sdk": "pnpm --filter @jolibox/sdk run build",
+    "build:web-sync-sdk": "pnpm --filter @jolibox/web-sync-sdk run build",
+    "build:web-async-sdk": "pnpm --filter @jolibox/web-async-sdk run build",
     "typedoc:ads-i18n": "pnpm --filter @jolibox/ads-sdk run typedoc:i18n",
     "typedoc:runtime-i18n": "pnpm --filter @jolibox/runtime run typedoc:i18n",
     "build:test-vite": "pnpm --filter @jolibox/test run build:vite",
