--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jolibox/sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Jolibox JavaScript SDK for Ads",
   "homepage": "https://sdk-docs.jolibox.com",
   "repository": {
@@ -16,7 +16,8 @@
     "build": "tsup",
     "typedoc": "typedoc",
     "typedoc:i18n": "typedoc --plugin typedoc-plugin-localization --generate-json ../../json/en",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "pnpm run build"
   },
   "keywords": [
     "jolibox",
