--- a/packages/web-sync-sdk/package.json
+++ b/packages/web-sync-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jolibox/web-sync-sdk",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "dist/index.cjs",
   "type": "module",
@@ -10,7 +10,8 @@
     "build": "tsup",
     "typedoc": "typedoc",
     "typedoc:i18n": "typedoc --plugin typedoc-plugin-localization --generate-json ../../json/en",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublish": "pnpm run build"
   },
   "keywords": [],
   "author": "",
