--- a/package.json
+++ b/package.json
@@ -32,12 +32,16 @@
   "author": "Jolibox",
   "license": "MIT",
   "devDependencies": {
+    "happy-dom": "^15.11.4",
     "serve": "^14.2.3",
     "tsup": "^8.3.0",
     "tsx": "^4.19.1",
     "typedoc": "^0.26.9",
     "typedoc-plugin-localization": "^3.0.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.2",
+    "vite": "^5.4.7",
+    "vitest": "^2.1.4",
+    "vitest-fetch-mock": "^0.4.2"
   },
   "workspaces": [
     "packages/*"
