--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -16,7 +16,7 @@
     "build": "tsup",
     "typedoc": "typedoc",
     "typedoc:i18n": "typedoc --plugin typedoc-plugin-localization --generate-json ../../json/en",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "prepublish": "pnpm run build"
   },
   "keywords": [
