--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jolibox/jolibox-js-sdk",
-  "version": "1.0.4-beta.6",
+  "version": "1.0.4",
   "description": "Jolibox JavaScript SDK",
   "homepage": "https://sdk-docs.jolibox.com",
   "repository": {
