feat: performance analyze

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jolibox/jolibox-js-sdk",
-  "version": "1.0.4",
+  "version": "1.0.5-beta.0",
   "description": "Jolibox JavaScript SDK",
   "homepage": "https://sdk-docs.jolibox.com",
   "repository": {
