--- a/packages/web-sync-sdk/package.json
+++ b/packages/web-sync-sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@jolibox/web-sync-sdk",
-  "version": "1.0.4",
+  "version": "1.0.5-beta.0",
   "description": "",
   "main": "dist/index.cjs",
   "type": "module",
